# nlp-gems

./: .gitignore  .tool-versions  Makefile  README.md  pyproject.toml
nlp_gems/: text.py
scripts/: dummy.py  preprocess.py
tests/unit/: test_text.py
