[tool.poetry]
name = "nlp-gems"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["torch"], version = "^4.46.3"}
scikit-learn = "^1.5.2"
datasets = "^3.1.0"
accelerate = "^1.1.1"
loguru = "^0.7.2"
unidecode = "^1.3.8"
ftfy = "^6.3.1"
fasttext = "^0.9.3"
toolz = "^1.0.0"
nltk = "^3.9.1"
spacy = "^3.8.2"
optuna = "^4.1.0"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
mlflow = "^2.18.0"
flatdict = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "flatdict.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
